[tool.poetry]
name = "views-transformation-library"
version = "2.2.1"
description = ""
authors = ["peder2911 <pglandsverk@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.3"
scipy = "^1.6.2"
xarray = ">=0.19.0"
stepshift = ">=1.2.0"
ingester3 = ">=0.6.0"
scikit_learn = "1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = {version = "^2.7.2", optional = true}
jedi = {version = "^0.18.0", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
