[tool.poetry]
name = "views-transformation-library"

version = "2.6.0"
description = "A package containing data transformation functions used by the ViEWS team"
homepage = "https://www.github.com/prio-data/views_transformation_library"
readme = "README.md"

authors = [
   "peder2911 <pglandsverk@gmail.com>",
   "jimdale <jim.dale@pcr.uu.se>",
   "rbjansen <r.b.jansen.uu@gmail.com>",
   "frehoy <frederick.hoyles@gmail.com>",
   "mihaicroicu <mihai.croicu@pcr.uu.se>"]
license = "CC-BY-NC"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.3"
scipy = "^1.6.2"
xarray = ">=0.19.0"
stepshift = ">=1.2.0"
ingester3 = ">=0.6.0"
scikit_learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = {version = "^2.7.2", optional = true}
jedi = {version = "^0.18.0", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
